<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/TextLuz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/luzAmbiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextProximidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/proximidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextLuz"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="24dp"
        android:text="@string/roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPasadas" />

    <TextView
        android:id="@+id/TextGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextRoll" />

    <TextView
        android:id="@+id/TextPasadas"
        android:layout_width="78dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/pasadasProximidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressbarPasadas" />

    <TextView
        android:id="@+id/TextGiros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="135dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="8dp"
        android:text="@string/girosContador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressbarGiros" />

    <TextView
        android:id="@+id/TextMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mensaje"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextGiros" />

    <ProgressBar
        android:id="@+id/progressIzq"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:progressBackgroundTint="#cc0000"
        android:progressTint="#cc0000"
        android:rotation="180"
        app:layout_constraintEnd_toStartOf="@+id/progressDer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextGrados" />

    <ProgressBar
        android:id="@+id/progressDer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:progressBackgroundTint="#0099cc"
        android:progressTint="#0099cc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressIzq"
        app:layout_constraintTop_toBottomOf="@+id/TextGrados" />

    <ProgressBar
        android:id="@+id/circularProgressbarPasadas"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/circular_yellow"
        android:secondaryProgress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextProximidad" />

    <ProgressBar
        android:id="@+id/circularProgressbarGiros"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/circular_green"
        android:secondaryProgress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressDer" />

</android.support.constraint.ConstraintLayout>